plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ecommerce.eshop'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenLocal() // <--- ADDED: Necessary to find your locally published auth-module
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	// --- ADDED: JJWT Dependencies for the latest version (0.12.6 is the current as of 2025-06-06) ---
	// Make sure these versions match what you have in your auth-module's build.gradle
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // Jackson is needed for JSON processing by JJWT
	// --- END ADDED JJWT ---

	// --- ADDED: Your auth-module dependency ---
	implementation project(':auth-module')
	// --- END ADDED auth-module ---
	implementation project(':email-otp-module')

	// --- ADD THESE LINES FOR SPRINGDOC OPENAPI (SWAGGER) ---
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// --- MINIO DEPENDENCIES ---
	// Add MinIO dependency
	implementation 'io.minio:minio:8.5.7'
}

tasks.named('test') {
	useJUnitPlatform()
}
